Fix spacing between headers and form fields.

--- a/frontend/src/app/ta-application/uta-application/uta-application.component.css
+++ b/frontend/src/app/ta-application/uta-application/uta-application.component.css
@@ -12,10 +12,16 @@
 
 mat-form-field {
   width: 50%;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 .mat-form-field-small {
   width: 25%;
+}
+
+.field-title p {
+  margin-bottom: 0;
 }
 
 @media (max-width: 768px) {
